[HAT] Add <IfVersion> configuration guards
This change is intended to help along the migration to Apache 2.4 and HHVM by
adding <IfVersion> guards around configuration blocks that we know will diverge
between the two versions.

It may seem a little odd to introduce empty Apache 2.4 configuration containers
and Apache 2.2 guards when our infrastructure consists entirely of Apache 2.2,
but because this infrastructure is so critical, I want to move forward in small
steps.

<IfVersion> directives require mod_version to be loaded. This is accomplished
in change I639d4d6dc, which is a dependency for this change.

Change-Id: I4af100bd1f231f5e0b5281de092caadcb2e4af72

--- a/main.conf
+++ b/main.conf
@@ -1,8 +1,13 @@
 #CoreDumpDirectory /tmp/apache-core
 
-<IfModule mod_php5.c>
- php_admin_flag engine off
-</IfModule>
+<IfVersion >= 2.4>
+    # placeholder
+</IfVersion>
+<IfVersion <= 2.2>
+    <IfModule mod_php5.c>
+     php_admin_flag engine off
+    </IfModule>
+</IfVersion>
 
 # MediaWiki
 <VirtualHost *>
@@ -44,14 +49,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/mediawiki/w">
-       <IfModule mod_php5.c>
-           php_admin_flag engine on
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine on
+          </IfModule>
+       </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/mediawiki/w/extensions">
-       <IfModule mod_php5.c>
-           php_admin_flag engine off
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine off
+          </IfModule>
+       </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -77,14 +92,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/testwikidata/w">
-       <IfModule mod_php5.c>
-           php_admin_flag engine on
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine on
+          </IfModule>
+       </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/testwikidata/w/extensions">
-       <IfModule mod_php5.c>
-           php_admin_flag engine off
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine off
+          </IfModule>
+       </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -116,14 +141,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikidata/w">
-       <IfModule mod_php5.c>
-           php_admin_flag engine on
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine on
+          </IfModule>
+       </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikidata/w/extensions">
-       <IfModule mod_php5.c>
-           php_admin_flag engine off
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine off
+          </IfModule>
+       </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -172,14 +207,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wiktionary.org/w">
-       <IfModule mod_php5.c>
-           php_admin_flag engine on
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine on
+          </IfModule>
+       </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wiktionary.org/w/extensions">
-       <IfModule mod_php5.c>
-           php_admin_flag engine off
-        </IfModule>
+       <IfVersion >= 2.4>
+          # placeholder
+       </IfVersion>
+       <IfVersion <= 2.2>
+          <IfModule mod_php5.c>
+              php_admin_flag engine off
+          </IfModule>
+       </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -245,14 +290,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikiquote.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikiquote.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -301,14 +356,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/donate/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/donate/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -329,14 +394,24 @@
     RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301]
 
     <Directory "/usr/local/apache/common/docroot/vote/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/vote/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -398,14 +473,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -472,14 +557,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikibooks.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikibooks.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -544,14 +639,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikisource.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikisource.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -616,14 +721,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikinews.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikinews.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -689,14 +804,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikiversity.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikiversity.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
@@ -735,14 +860,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikivoyage.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikivoyage.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 
     # Variant aliases
