--- a/search.wikimedia.conf
+++ b/search.wikimedia.conf
@@ -4,9 +4,14 @@
 	ServerName search.wikimedia.org
 	DocumentRoot "/usr/local/apache/common/docroot/search.wikimedia.org"
 	DirectoryIndex index.php
-	<IfModule mod_php5.c>
-		php_admin_flag engine on
-	</IfModule>
+	<IfVersion >= 2.4>
+		# placeholder
+	</IfVersion>
+	<IfVersion <= 2.2>
+		<IfModule mod_php5.c>
+			php_admin_flag engine on
+		</IfModule>
+	</IfVersion>
 </VirtualHost>
 
 # vim: syn=apache autoindent
