--- a/wikimania.conf
+++ b/wikimania.conf
@@ -41,14 +41,24 @@
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 </VirtualHost>
 
@@ -73,14 +83,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 </VirtualHost>
 
