--- a/foundation.conf
+++ b/foundation.conf
@@ -35,14 +35,24 @@
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
     <Directory "/usr/local/apache/common/docroot/foundation/w">
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine on
+            </IfModule>
+        </IfVersion>
     </Directory>
     <Directory "/usr/local/apache/common/docroot/foundation/w/extensions">
-        <IfModule mod_php5.c>
-            php_admin_flag engine off
-        </IfModule>
+        <IfVersion >= 2.4>
+            # placeholder
+        </IfVersion>
+        <IfVersion <= 2.2>
+            <IfModule mod_php5.c>
+                php_admin_flag engine off
+            </IfModule>
+        </IfVersion>
     </Directory>
 </VirtualHost>
 
