Update the redirect target for education.wikimedia.org
Change-Id: I29b34689e1537683cb1fde42c7533fc0bb0f5a1f

--- a/redirects.conf
+++ b/redirects.conf
@@ -726,9 +726,9 @@
 	# funnel	educacao.wikimedia.org	//pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU
 	RewriteCond %{HTTP_HOST} =educacao.wikimedia.org
 	RewriteRule . %{ENV:RW_PROTO}://pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU [R=301,L,NE]
-	# funnel	education.wikimedia.org	//outreach.wikimedia.org/wiki/Wikipedia_Education_Program
+	# funnel	education.wikimedia.org	//outreach.wikimedia.org/wiki/Education
 	RewriteCond %{HTTP_HOST} =education.wikimedia.org
-	RewriteRule . %{ENV:RW_PROTO}://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L,NE]
+	RewriteRule . %{ENV:RW_PROTO}://outreach.wikimedia.org/wiki/Education [R=301,L,NE]
 	# rewrite	wikiipedia.org	//www.wikipedia.org
 	RewriteCond %{HTTP_HOST} =wikiipedia.org
 	RewriteRule .* %{ENV:RW_PROTO}://www.wikipedia.org$0 [R=301,L,NE]
