--- a/main.conf
+++ b/main.conf
@@ -724,6 +724,17 @@
 
     RewriteEngine On
 
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/$1
+        ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|mo|my|sg|tw)) \
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/favicon.php  [P]
+    </IfDefine>
+
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
