--- a/main.conf
+++ b/main.conf
@@ -724,6 +724,15 @@
 
     RewriteEngine On
 
+    <IfModule mod_proxy_fcgi.c>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/favicon.php  [P]
+    </IfModule>
+
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
