Replace references to /etc/apache2/wmf symlink with its link target
Mirror the changes from Ia63c3f1

Change-Id: Ib0f34f5d14e751b9eecf4f06182dff173810c618

--- a/all.conf
+++ b/all.conf
@@ -3,34 +3,34 @@
 
 # Note, the order is important
 # In particular, this must be the first virtual subdomain:
-Include /etc/apache2/wmf/nonexistent.conf
+Include /usr/local/apache/conf/nonexistent.conf
 
 # www.wikipedia.org
-Include /etc/apache2/wmf/www.wikipedia.conf
+Include /usr/local/apache/conf/www.wikipedia.conf
 
 # Redirects also must override *.wikipedia.org
-Include /etc/apache2/wmf/redirects.conf
+Include /usr/local/apache/conf/redirects.conf
 
 # Various domains including all the multi-subdomain projects
 # Also some site-wide settings
-Include /etc/apache2/wmf/main.conf
+Include /usr/local/apache/conf/main.conf
 
 # A few single-subdomain projects
-Include /etc/apache2/wmf/remnant.conf
+Include /usr/local/apache/conf/remnant.conf
 
 # secure.wikimedia.org unencrypted backend
-Include /etc/apache2/wmf/wikimedia-ssl-backend.conf
+Include /usr/local/apache/conf/wikimedia-ssl-backend.conf
 
 # *.wikimedia.org
-Include /etc/apache2/wmf/wikimedia.conf
+Include /usr/local/apache/conf/wikimedia.conf
 
 # wikimediafoundation.org and its aliases
-Include /etc/apache2/wmf/foundation.conf
+Include /usr/local/apache/conf/foundation.conf
 
 # A simple redirect to en, perhaps this once contained the load balancing redirect
-Include /etc/apache2/wmf/en2.conf
+Include /usr/local/apache/conf/en2.conf
 
 # A couple of redirects for www.XXX.wikipedia.org
-Include /etc/apache2/wmf/postrewrites.conf
+Include /usr/local/apache/conf/postrewrites.conf
 
 # vim: syn=apache sts=4 sw=4 autoindent
