--- a/main.conf
+++ b/main.conf
@@ -28,7 +28,7 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     ServerAlias *.wikimedia.beta-hhvm.wmflabs.org
     DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
 
-    Include /etc/apache2/wmf/hhvm.conf
+    Include /usr/local/apache/conf/hhvm.conf
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
 
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
