--- a/loginwiki.conf
+++ b/loginwiki.conf
@@ -32,7 +32,7 @@
     ServerName login.wikimedia.beta-hhvm.wmflabs.org
     DocumentRoot "/usr/local/apache/common/docroot/login"
 
-    Include /etc/apache2/wmf/hhvm.conf
+    Include /usr/local/apache/conf/hhvm.conf
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
 
     <Directory "/usr/local/apache/common/docroot/login/w">
