--- a/redirects.conf
+++ b/redirects.conf
@@ -354,6 +354,8 @@
 	doc.mediawiki.org \
 	integration.mediawiki.org \
 	nostalgia.wikimedia.org \
+	cs.wikimedia.org \
+	cz.wikimedia.org \
 	mediawiki.org \
 	wikimedia.org \
 	wikinews.org \
@@ -893,6 +895,12 @@
 	# rewrite	nostalgia.wikimedia.org	//nostalgia.wikipedia.org
 	RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
 	RewriteRule .* %{ENV:RW_PROTO}://nostalgia.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	cs.wikimedia.org	http://www.wikimedia.cz
+	RewriteCond %{HTTP_HOST} =cs.wikimedia.org
+	RewriteRule .* http://www.wikimedia.cz$0 [R=301,L,NE]
+	# rewrite	cz.wikimedia.org	http://www.wikimedia.cz
+	RewriteCond %{HTTP_HOST} =cz.wikimedia.org
+	RewriteRule .* http://www.wikimedia.cz$0 [R=301,L,NE]
 	# rewrite	mediawiki.org	//www.mediawiki.org
 	RewriteCond %{HTTP_HOST} =mediawiki.org
 	RewriteRule .* %{ENV:RW_PROTO}://www.mediawiki.org$0 [R=301,L,NE]
