Add robots.txt rewrite rule where wiki is public
Change-Id: Ieb55283f7b33c589bec71e9e17f170948a57d3b8

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -106,6 +106,9 @@
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
+    # Load robots.txt from the wiki
+    RewriteRule ^/robots.txt$ /w/robots.php [L]
+
     <Directory "/usr/local/apache/common/docroot/login/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
