--- a/wikimania.conf
+++ b/wikimania.conf
@@ -72,6 +72,9 @@
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
+    # Load robots.txt from the wiki
+    RewriteRule ^/robots.txt$ /w/robots.php [L]
+
     <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
