Apache config using mod_proxy_fcgi
Change-Id: I2cddc62d421952e478cbc02834adb816a66c4bad

--- a/testwiki.conf
+++ b/testwiki.conf
@@ -7,6 +7,15 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/favicon.php  [P]
+    </IfDefine>
 
     # First grab the subdomain from HTTP_HOST
 #    RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikibooks\.org
