--- a/loginwiki.conf
+++ b/loginwiki.conf
@@ -6,6 +6,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/favicon.php  [P]
+    </IfDefine>
+
     #RewriteCond %{HTTP:X-Forwarded-Proto} !https
     #RewriteRule ^/(.*)$ https://login.wikimedia.beta.wmflabs.org/$1 [R=301,L]
 
@@ -25,18 +35,5 @@
         <IfModule mod_php5.c>
             php_admin_flag engine off
         </IfModule>
-    </Directory>
-</VirtualHost>
-
-<VirtualHost *>
-    ServerName login.wikimedia.beta-hhvm.wmflabs.org
-    DocumentRoot "/usr/local/apache/common/docroot/login"
-
-    Include /usr/local/apache/conf/hhvm.conf
-    Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
-
-    <Directory "/usr/local/apache/common/docroot/login/w">
-    </Directory>
-    <Directory "/usr/local/apache/common/docroot/login/w/extensions">
     </Directory>
 </VirtualHost>
