--- a/remnant.conf
+++ b/remnant.conf
@@ -6,6 +6,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/favicon.php  [P]
+    </IfDefine>
+
     RewriteRule ^/robots.txt$ /w/robots.php [L]
     Alias /wiki /usr/local/apache/common/docroot/commons/w/index.php
     RewriteRule ^/$ /w/index.php
@@ -34,6 +44,15 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/favicon.php  [P]
+    </IfDefine>
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -68,6 +87,7 @@
         </IfModule>
     </Directory>
 </VirtualHost>
+
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/incubator"
     ServerName incubator.wikimedia.beta.wmflabs.org
@@ -75,6 +95,15 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/favicon.php  [P]
+    </IfDefine>
 
     Alias /wiki /usr/local/apache/common/docroot/incubator/w/index.php
     RewriteRule ^/$ /w/index.php
@@ -101,6 +130,15 @@
     ServerName deployment.wikimedia.beta.wmflabs.org
 
     AllowEncodedSlashes On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/favicon.php  [P]
+    </IfDefine>
 
     RewriteEngine On
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -130,6 +168,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/favicon.php  [P]
+    </IfDefine>
+    
     RewriteRule ^/robots.txt$ /w/robots.php [L]
     Alias /wiki /usr/local/apache/common/docroot/ee-prototype/w/index.php
     RewriteRule ^/$ /w/index.php
