--- a/wiktionary.conf
+++ b/wiktionary.conf
@@ -9,6 +9,17 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/$1
+        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/favicon.php  [P]
+    </IfDefine>
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
