Apache config using mod_proxy_fcgi
Change-Id: I2cddc62d421952e478cbc02834adb816a66c4bad

--- a/en2.conf
+++ b/en2.conf
@@ -1,1 +1,6 @@
-placeholder.conf
+###
+# This Apache configuration file should be left empty
+#
+# It is supposed to be linked to whenever we want to skip an Apache
+# configuration file coming from production.
+###
