--- a/main.conf
+++ b/main.conf
@@ -21,22 +21,6 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 
 # Wikipedias
 
-# HHVM testing on Beta
-<VirtualHost *>
-    ServerName wikipedia-hhvm
-    ServerAlias *.wikipedia.beta-hhvm.wmflabs.org
-    ServerAlias *.wikimedia.beta-hhvm.wmflabs.org
-    DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
-
-    Include /usr/local/apache/conf/hhvm.conf
-    Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
-
-    <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
-    </Directory>
-    <Directory "/usr/local/apache/common/docroot/wikipedia.org/w/extensions">
-    </Directory>
-</VirtualHost>
-
 <VirtualHost *>
     ServerName wikipedia
     ServerAlias *.wikipedia.beta.wmflabs.org
@@ -48,6 +32,17 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 
     RewriteEngine On
 
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/$1
+        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/favicon.php  [P]
+    </IfDefine>
+
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
@@ -58,7 +53,7 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 #    RewriteCond %{SERVER_ADDR} ^211\.115\.107
 #    RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
 #    RewriteRule ^/upload/(.*)$ /upload/%1/$1 [L]
-    
+
     # The rest are served by the upload cluster
     # First grab the subdomain from HTTP_HOST
 #    RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
@@ -138,6 +133,17 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/$1
+        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/favicon.php  [P]
+    </IfDefine>
 
     # www -> portal
     RewriteCond %{HTTP_HOST} www.wikibooks.org
