--- a/postrewrites.conf
+++ b/postrewrites.conf
@@ -1,1 +1,6 @@
-placeholder.conf
+###
+# This Apache configuration file should be left empty
+#
+# It is supposed to be linked to whenever we want to skip an Apache
+# configuration file coming from production.
+###
