--- a/wikiversity.conf
+++ b/wikiversity.conf
@@ -8,6 +8,17 @@
 
     RewriteEngine On
 
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/$1
+        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/index.php
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikiversity.org/w/favicon.php  [P]
+    </IfDefine>
+
     # www -> portal
     RewriteCond %{HTTP_HOST} www.wikiversity.org
     RewriteRule ^/$ http://en.wikiversity.org/wiki/Wikinews_portal [R=301,L]
