--- a/wmflabs.conf
+++ b/wmflabs.conf
@@ -88,6 +88,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/favicon.php  [P]
+    </IfDefine>
+
     RewriteMap lowercase int:tolower
 
     # Uploads to the host-specific directory
@@ -254,6 +264,15 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+
+    <IfDefine HHVM>
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+        ProxyPass       /w/extensions        !
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/$1
+        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/favicon.php  [P]
+    </IfDefine>
 
     # www -> portal
     RewriteCond %{HTTP_HOST} www.wikivoyage.org
