Fix-up for I2cddc62d421: Fix unbalanced parens in regex
Change-Id: I185573c2c738ac707e746022ee70ab1bb52f31d7

--- a/wiktionary.conf
+++ b/wiktionary.conf
@@ -14,7 +14,7 @@
         ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/$1
-        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+        ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
                                              fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wiktionary.org/w/robots.php   [P]
