--- a/main.conf
+++ b/main.conf
@@ -36,7 +36,7 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
         ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/$1
-        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+        ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
                                              fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/robots.php   [P]
@@ -138,7 +138,7 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
         ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/$1
-        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+        ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
                                              fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/robots.php   [P]
