--- a/wikispecies.conf
+++ b/wikispecies.conf
@@ -12,7 +12,7 @@
         ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikispecies.org/w/index.php
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikispecies.org/w/$1
-        ProxyPassMatch  ^/(zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
+        ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
                                              fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikispecies.org/w/index.php
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikispecies.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikispecies.org/w/robots.php   [P]
