mod_proxy_balancer configs
Configure a balancer:// with retry=0 for all proxied reqs.

Change-Id: Ib801ee96d9a58836bce22dfe9762931a1ba39b2e

--- a/all.conf
+++ b/all.conf
@@ -1,5 +1,10 @@
 # Include all configuration files from the git apache-config project
 
+<IfDefine HHVM>
+  <Proxy balancer://hhvm>
+    BalancerMember fcgi://127.0.0.1:9000 retry=0
+  </Proxy>
+</IfDefine>
 
 # Note, the order is important
 # In particular, this must be the first virtual subdomain:
