--- a/wikisource.conf
+++ b/wikisource.conf
@@ -9,14 +9,14 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/$1
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/$1
         ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
-                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/index.php
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikisource.org/w/favicon.php  [P]
+                                             balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/index.php
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/wikisource.org/w/favicon.php  [P]
     </IfDefine>
 
     # www -> portal
