--- a/wmflabs.conf
+++ b/wmflabs.conf
@@ -90,12 +90,12 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/wikimedia.org/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/$1
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikimedia.org/w/favicon.php  [P]
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/wikimedia.org/w/$1
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/wikimedia.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/wikimedia.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/wikimedia.org/w/favicon.php  [P]
     </IfDefine>
 
     RewriteMap lowercase int:tolower
@@ -266,12 +266,12 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/wikivoyage.org/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/$1
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikivoyage.org/w/favicon.php  [P]
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/wikivoyage.org/w/$1
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/wikivoyage.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/wikivoyage.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/wikivoyage.org/w/favicon.php  [P]
     </IfDefine>
 
     # www -> portal
