--- a/main.conf
+++ b/main.conf
@@ -33,14 +33,14 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/$1
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/$1
         ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
-                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/favicon.php  [P]
+                                             balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/wikipedia.org/w/favicon.php  [P]
     </IfDefine>
 
     # Make robots.txt editable via Mediawiki:robots.txt
@@ -135,14 +135,14 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/$1
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/$1
         ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
-                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/favicon.php  [P]
+                                             balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/wikibooks.org/w/favicon.php  [P]
     </IfDefine>
 
     # www -> portal
