--- a/testwiki.conf
+++ b/testwiki.conf
@@ -9,12 +9,12 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php
+        ProxyPass       /wiki                balancer://hhvm/usr/local/apache/common/docroot/test/w/index.php
         ProxyPass       /w/extensions        !
-        ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/$1
-        RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php    [P]
-        RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/robots.php   [P]
-        RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/favicon.php  [P]
+        ProxyPassMatch  ^/w/(.*\.(php|hh))$  balancer://hhvm/usr/local/apache/common/docroot/test/w/$1
+        RewriteRule     ^/$                  balancer://hhvm/usr/local/apache/common/docroot/test/w/index.php    [P]
+        RewriteRule     ^/robots\.txt$       balancer://hhvm/usr/local/apache/common/docroot/test/w/robots.php   [P]
+        RewriteRule     ^/favicon\.ico$      balancer://hhvm/usr/local/apache/common/docroot/test/w/favicon.php  [P]
     </IfDefine>
 
     # First grab the subdomain from HTTP_HOST
