Add retry=0 to ProxyPass directives
Change-Id: Ie1b23c2ba49c0358c1c96f9b9a7b8bd9ab846372

--- a/testwiki.conf
+++ b/testwiki.conf
@@ -9,7 +9,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/test/w/index.php    [P]
