--- a/loginwiki.conf
+++ b/loginwiki.conf
@@ -8,7 +8,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/login/w/index.php    [P]
