--- a/main.conf
+++ b/main.conf
@@ -33,11 +33,11 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/$1
         ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
-                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php retry=0
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/robots.php   [P]
         RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikipedia.org/w/favicon.php  [P]
@@ -135,11 +135,11 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/$1
         ProxyPassMatch  ^/zh(-(hans|hant|cn|hk|sg|tw))|sr(-(ec|el)) \
-                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php
+                                             fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php retry=0
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/index.php    [P]
         RewriteRule     ^/robots\.txt$       fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/robots.php   [P]
         RewriteRule     ^/favicon\.ico$      fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikibooks.org/w/favicon.php  [P]
