--- a/remnant.conf
+++ b/remnant.conf
@@ -8,7 +8,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/commons/w/index.php    [P]
@@ -46,7 +46,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/meta/w/index.php    [P]
@@ -97,7 +97,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/incubator/w/index.php    [P]
@@ -132,7 +132,7 @@
     AllowEncodedSlashes On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/labs/w/index.php    [P]
@@ -170,7 +170,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/ee-prototype/w/index.php    [P]
