--- a/wikidata.conf
+++ b/wikidata.conf
@@ -10,7 +10,7 @@
     RewriteEngine On
 
     <IfDefine HHVM>
-        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikidata/w/index.php
+        ProxyPass       /wiki                fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikidata/w/index.php retry=0
         ProxyPass       /w/extensions        !
         ProxyPassMatch  ^/w/(.*\.(php|hh))$  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikidata/w/$1
         RewriteRule     ^/$                  fcgi://127.0.0.1:9000/usr/local/apache/common/docroot/wikidata/w/index.php    [P]
