rewriting techblog.w.o to blog.w.o
adding redirection rule to rewrite our blog url and avoid supporting a
one-off techblog.w.o certificate

T90638

Change-Id: Ic68a07aab5f664fe8b818c342832d6f601dd0577

--- a/redirects.conf
+++ b/redirects.conf
@@ -375,6 +375,7 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	techblog.wikimedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -962,6 +963,9 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:RW_PROTO}://m.wikipedia.org/ [R=301,L,NE]
+	# rewrite	techblog.wikimedia.org	https://blog.wikimedia.org/
+	RewriteCond %{HTTP_HOST} =techblog.wikimedia.org
+	RewriteRule .* https://blog.wikimedia.org$0 [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	//en.wikibooks.org/wiki/Wikijunior
