Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Configuration for Apache as deployed on the cluster.
+	state = read only
 [receive]
 	requireChangeId = true
 [submit]
